--- a/provision/roles/mysql/tasks/main.yml
+++ b/provision/roles/mysql/tasks/main.yml
@@ -27,10 +27,16 @@
 - name: create exploit user
   become: yes
   mysql_user: 
-      name: exploit
-      password: exploit
+      name: "{{ db_user }}"
+      password: "{{ db_password }}"
       priv: '*.*:ALL'
       state: present
+
+- name: create database
+  become: yes
+  mysql_db:
+    name: "{{ db_name }}"
+    state: present
   
 
 ...
