--- a/provision/roles/django/tasks/main.yml
+++ b/provision/roles/django/tasks/main.yml
@@ -9,20 +9,32 @@
 
 - name: Install Django
   become: yes
-  pip: name="{{ item }}"
-  executable: pip3
+  pip: 
+    name:  "{{ item }}"
+    executable: pip3
   with_items:
     - django
     - djangorestframework
     - PyMySQL
 
 - name: create folders
+  become: yes
   file:
     path: "{{app_path}}{{app_name}}/static"
     state: directory
     mode: 0755
 
 - name: create folders
+  become: yes
+  file:
+    path: "{{app_path}}{{app_name}}/static/admin"
+    state: directory
+    mode: 0755
+
+
+
+- name: create folders
+  become: yes
   file:
     path: "{{app_path}}{{app_name}}/media"
     state: directory
