include drf-nested-routers in provisioning

--- a/provision/roles/django/tasks/main.yml
+++ b/provision/roles/django/tasks/main.yml
@@ -17,6 +17,7 @@
     - djangorestframework
     - PyMySQL
     - django-rest-swagger
+    - drf-nested-routers
 
 - name: create folders
   become: yes
