--- a/provision/roles/django/tasks/main.yml
+++ b/provision/roles/django/tasks/main.yml
@@ -18,6 +18,7 @@
     - PyMySQL
     - django-rest-swagger
     - drf-nested-routers
+    - django-cors-headers
 
 - name: create folders
   become: yes
